# recall-corp

./: README.md  compose.yaml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  cards.py  collections.py  dependencies.py  storage.py  train.py  train_records.py  users.py
backend/app/core/: __init__.py  auth.py  config.py  minio.py  ollama.py  training.py
backend/app/db/: __init__.py  database.py  unit_of_work.py
backend/app/db/models/: __init__.py  card.py  card_collection.py  collection.py  collection_subscription.py  file.py  file_card.py  metadata.py  train.py  train_record.py  user.py
backend/app/repositories/: __init__.py  base.py  card.py  card_collection.py  collection.py  collection_subscription.py  file.py  file_card.py  train.py  train_record.py  user.py
backend/app/schemas/: __init__.py  base.py  card.py  collection.py  storage.py  train.py  train_record.py  user.py
backend/app/services/: __init__.py  base.py  card.py  collection.py  storage.py  train.py  train_record.py  user.py
backend/config/: minio-setup.sh  nginx.conf
backend/config/examples/: auth.env.example  minio-backend.env.example  minio-server.env.example  postgres.env.example  train.env.example
backend/config/ollama-setup-container/: Dockerfile  README.md  pyproject.toml  system_prompt.md
backend/config/ollama-setup-container/src/: run.py  settings.py
backend/docs/: api-reference.md  architecture.md  configuration-environment-setup.md  core-domain-models.md
(+153 files in other folders)
