[tool.poetry]
name = "recall-back"
description = ""
authors = ["AntonTsoy <tcoy210@gmail.com>"]
readme = "README.md"
version = "0.2.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.36"
fastapi = {extras = ["standard"], version = "^0.115.3"}
python-multipart = "^0.0.17"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
python-jose = "^3.3.0"
bcrypt = "^4.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.33.0"
ollama = "^0.4.7"
miniopy-async = "^1.22.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
